# myths_rag

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: settings.example.env
docs/: EVALUATION.md  ROADMAP.md  SOURCES.md
scripts/: normalize_bibliotheca.py  normalize_prose_edda.py
